# infotecs

./: CMakeLists.txt  Doxyfile  README.md  find_prime.cpp  main.cpp  menu.cpp  write.cpp
Primes/: Menu.cpp  Primes.cpp  Primes.h
Tests/: Test.cpp
lib/googletest/: CMakeLists.txt
lib/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-matchers.h  gmock-spec-builders.h
lib/googletest/googlemock/src/: gmock-spec-builders.cc
lib/googletest/googlemock/test/: gmock-actions_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-spec-builders_test.cc
lib/googletest/googletest/include/gtest/: gtest-printers.h  gtest.h
lib/googletest/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
lib/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
lib/googletest/googletest/test/: googletest-death-test-test.cc  googletest-filepath-test.cc  gtest_unittest.cc
